# easy-encryption

./: .gitignore  Base64.cpp  Base64.h  CMakeLists.txt  README.md  b64.h  cl.cpp  encrypt.h  main.cpp  main_encrypt.cpp  main_encrypt_lower.cpp  main_vigenere.cpp  vigenere.h  wrapper.py
.github/workflows/: linux-cmake.yml  macos-cmake.yml  windows-cmake.yml
examples/: CMakeLists.txt  application.cpp  main.cpp  main_base64.cpp  main_vigenere.cpp
src/: EasyEncryption.cc  EasyEncryption.h  EasyEncryptionConsts.h
src/base64/: Base64.cc  Base64.h
src/vigenere/: Vigenere.cc  Vigenere.h
